# find-egg-client

./: README.md
assets/eggs/: 24358.eps
project/client_unity/Assets/Prefabs/: Aura_2.prefab  Bot.prefab  Enemy_01.prefab  Enemy_02.prefab  Fireball.prefab  Magic Circle.prefab  Map.prefab  Opponent.prefab  Player.prefab  unitychan_dynamic_locomotion.prefab
project/client_unity/Assets/Scenes/: Gameplay.unity  MainMenu.unity
project/client_unity/Assets/Scripts/: PlayerController.cs  SceneManager.cs
project/client_unity/Assets/Scripts/Games/: EggHandler.cs
project/client_unity/Assets/Scripts/Networks/: NetworkBehavior.cs  TestConnection.cs
project/client_unity/Assets/Scripts/Networks/websocket-sharp-library/: CompressionMethod.cs  WebSocketSharp.asmdef
project/client_unity/ProjectSettings/: TagManager.asset
project/find_egg_account_server/: main.go
project/find_egg_client/: .gitignore
project/find_egg_client/Assets/: CoreGameManager.cs  InGameMenuManager.cs  WSATestCertificate.pfx
project/find_egg_client/Assets/Prefabs/: CoreGame.prefab  Egg.prefab  InGameMenu.prefab  Lobby.prefab  Map.prefab  Opponent.prefab  Player.prefab
project/find_egg_client/Assets/Scenes/: AdsDebug.unity  Gameplay.unity
project/find_egg_client/Assets/Scripts/: AccountManager.cs  ButtonManager.cs  Controller.cs  CoreGameManager.cs  DebugManager.cs  LobbyDataSync.cs  LobbyManager.cs  NetworkHandler.cs  PlayerDataLocal.cs  PlayerDataMaster.cs  PlayerDataSync.cs  PlayerInGame.cs  RealtimeDebug.cs  SceneManager.cs
project/find_egg_client/Assets/Scripts/AdsDebug/: AdsPlayerManager.cs
project/find_egg_client/Assets/Scripts/Games/: TimerHandler.cs
project/find_egg_client/Assets/Scripts/Networks/: Player.cs
project/find_egg_client/Assets/Scripts/Networks/NetworkBehaviors/: AccountBehavior.cs  ChatBehavior.cs  CoreGameBehavior.cs  GameBehavior.cs  LobbyBehavior.cs  NetworkBehavior.cs  PaymentBehavior.cs  QueueData.cs  ServerAddress.cs
project/find_egg_client/Assets/Scripts/Networks/websocket-sharp-library/: Ext.cs  WebSocket.cs
project/find_egg_client/ProjectSettings/: EditorBuildSettings.asset  ProjectSettings.asset  TagManager.asset
project/find_egg_lobby_server/: .gitignore  CMakeLists.txt  README.md  asio_compatibility.hpp  client_ws.hpp  client_wss.hpp  crypto.hpp  entry_point_ws.cpp  entry_point_wss.cpp  game_server_endpoint.cpp  game_server_endpoint.hpp  main.cpp  mutex.hpp  server_handler.hpp  server_ws.hpp  server_wss.hpp  status_code.hpp  utility.hpp  ws_examples.cpp  wss_examples.cpp
project/find_egg_lobby_server/tests/: CMakeLists.txt  assert.hpp  crypto_test.cpp  io_test.cpp  parse_test.cpp
project/find_egg_server/: build.sbt
project/find_egg_server/src/main/resources/: public-certificate.pem
project/find_egg_server/src/main/scala/EasterEggExtremeServer/: ServerEntryPoint.scala
project/protocol_buffer/source/myself/1-basics-part-i/: 1-scalar-type.proto  2-repeates-fields.proto  3-comments.proto  4-enums.proto  5-practice.proto
project/server_scala/: .gitignore  build.sbt
project/server_scala/src/main/resources/: application.conf  myKeystore.p12  private-key.key  public-key.pub
project/server_scala/src/main/scala/: ServerEntryPoint.scala
(+12 files in other folders)
